--- a/BTSiteOdev/wwwroot/Index.html
+++ b/BTSiteOdev/wwwroot/Index.html
@@ -6,6 +6,7 @@
     <link href="css/bootstrap.css" rel="stylesheet" />
     <link href="style/style.css" rel="stylesheet" />
     <link href="font/css/all.min.css" rel="stylesheet" />
+    <link rel="icon" href="https://www.btakademi.com/images/favicon.ico" type="image/x-icon" />
     <title>BT Akademi - Ana Sayfa</title>
 </head>
 <body>
